--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "selenium-webdriver": "~2.40.0",
     "load-grunt-tasks": "~0.4.0",
     "grunt-selenium-launcher": "~0.1.1",
-    "protractor": "~0.19.0"
+    "grunt-env": "~0.4.1",
+    "protractor": "git+https://github.com/angular/protractor.git"
   },
   "scripts": {
     "test": "grunt test"
