--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "url": "git@github.com:tboyce/angular-cucumber.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-cucumber": "~0.2.3",
-    "selenium-webdriver": "~2.40.0",
-    "load-grunt-tasks": "~0.4.0",
-    "grunt-selenium-launcher": "~0.1.1",
-    "grunt-env": "~0.4.1",
-    "protractor": "git+https://github.com/angular/protractor.git"
+    "grunt": "^0.4.5",
+    "grunt-cucumberjs": "^0.5.0",
+    "grunt-env": "^0.4.2",
+    "grunt-selenium-launcher": "^0.1.1",
+    "load-grunt-tasks": "^0.4.0",
+    "protractor": "^1.5.0",
+    "selenium-webdriver": "^2.44.0"
   },
   "scripts": {
     "test": "grunt test"
@@ -21,9 +21,9 @@
   "author": "Timothy Boyce <tboyce@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "q": "~0.9.7",
-    "qcumber": "~0.1.0",
-    "should": "~3.1.3",
-    "cucumber": "~0.3.3"
+    "cucumber": "^0.3.3",
+    "q": "^0.9.7",
+    "qcumber": "^0.1.3",
+    "should": "^3.1.4"
   }
 }
