--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "grunt": "^0.4.5",
     "grunt-cucumberjs": "^0.5.0",
     "grunt-env": "^0.4.2",
-    "grunt-selenium-launcher": "^0.1.1",
+    "grunt-shell": "^1.1.1",
     "load-grunt-tasks": "^0.4.0",
+    "parallel-cucumber": "^0.1.7",
     "protractor": "^1.5.0",
     "selenium-webdriver": "^2.44.0"
   },
