--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "grunt-env": "^0.4.2",
     "grunt-selenium-launcher": "^0.1.1",
     "load-grunt-tasks": "^0.4.0",
-    "protractor": "^1.5.0",
+    "protractor": "~2.0.0",
     "selenium-webdriver": "^2.44.0"
   },
   "scripts": {
